// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Internal|Debate.viewerHasArgument bool fetches if viewer has given an argument 1`] = `
Object {
  "node": Object {
    "viewerHasArgument": false,
  },
}
`;

exports[`Internal|Debate.viewerHasArgument bool fetches if viewer has given an argument 2`] = `
Object {
  "node": Object {
    "viewerHasArgument": true,
  },
}
`;
